--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   },
   "keywords": [
     "egg",
-    "eggPlugin",
-    "egg-plugin"
+    "eggMqtt",
+    "egg-mqtt",
+    "egg-mqtt-waynechu",
+    "waynechu",
+    "mqtt"
   ],
   "dependencies": {
     "mqtt": "^4.3.5"
